# Financial_GPT_action

./: pyproject.toml
